# SDL-GUI

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cs  UnitTest.cs
SDL-GUI/: Assets.cs  CMakeLists.txt  Core.cs  Structures.cs  Test.cs  Window.cs
